--- a/Rx.NET/Source/NuSpecs/System.Reactive.Linq.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Linq.nuspec
@@ -10,7 +10,7 @@
     <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
     <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Reactive Extensions Query Library used to express complex event processing queries over observable sequences.</description>
+    <description>Reactive Extensions (Rx) Query Library used to express complex event processing queries over observable sequences.</description>
     <copyright>Copyright (c) .NET Foundation and Contributors.</copyright>
     <language>en-US</language>
     <tags>Rx Reactive Extensions Observable LINQ Events</tags>
