--- a/Rx.NET/Source/NuSpecs/System.Reactive.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.nuspec
@@ -3,14 +3,14 @@
     <metadata>
         <id>System.Reactive</id>
         <version>$version$</version>
-        <title>Reactive Extensions - Main Library</title>
+        <title>Reactive Extensions (Rx) - Main Library</title>
         <authors>.NET Foundation and Contributors</authors>
         <owners>Microsoft,RxTeam</owners>
         <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
         <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
         <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Reactive Extensions Main Library combining the interfaces, core, LINQ, and platform services libraries.</description>
+        <description>Reactive Extensions (Rx) Main Library combining the interfaces, core, LINQ, and platform services libraries.</description>
         <copyright>Copyright (c) .NET Foundation and Contributors.</copyright>
         <language>en-US</language>
         <tags>Rx Reactive Extensions Observable LINQ Events</tags>
