Update Ix to only use NETStandard.Library in netstandard1.x vers

--- a/Ix.NET/Source/NuSpecs/System.Interactive.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.nuspec
@@ -15,7 +15,10 @@
     <language>en-US</language>
     <tags>Ix Interactive Extensions Enumerable</tags>
     <dependencies>
-      <dependency id="NETStandard.Library" version="1.6.0" />
+     <group targetFramework="netstandard1.0">       
+        <dependency id="NETStandard.Library" version="1.6.0" />
+     </group>
+     <group targetFramework="net45" />
     </dependencies>
   </metadata>
   <files>
