--- a/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
@@ -15,8 +15,13 @@
     <language>en-US</language>
     <tags>Rx Reactive Extensions Observable LINQ Events</tags>
     <dependencies>
-      <dependency id="System.Reactive.Linq" version="$version$" />
-      <dependency id="System.Linq.Queryable" version="4.0.1" />      
+      <group targetFramework="net45">
+        <dependency id="System.Reactive.Linq" version="$version$" />
+      </group>
+      <group targetFramework="netstandard1.0">
+        <dependency id="System.Reactive.Linq" version="$version$" />
+        <dependency id="System.Linq.Queryable" version="4.0.1" />      
+      </group>  
     </dependencies>
   </metadata>
   <files>
