--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -27,10 +27,7 @@
   },
 
   "dependencies": {
-    "System.Reactive.Interfaces": { "target": "project" },
-    "System.ComponentModel": "4.0.1",
-    "System.Diagnostics.Contracts": "4.0.1",
-    "System.Dynamic.Runtime": "4.0.11"
+    "System.Reactive.Interfaces": { "target": "project" }
   },
 
   "frameworks": {
@@ -89,6 +86,11 @@
           "USE_TIMER_SELF_ROOT",
           "PLIB"
         ]
+      },
+      "dependencies": {
+        "System.ComponentModel": "4.0.1",
+        "System.Diagnostics.Contracts": "4.0.1",
+        "System.Dynamic.Runtime": "4.0.11"
       }
     },
     "netstandard1.1": {
@@ -108,6 +110,11 @@
           "USE_TIMER_SELF_ROOT",
           "PLIB"
         ]
+      },
+      "dependencies": {
+        "System.ComponentModel": "4.0.1",
+        "System.Diagnostics.Contracts": "4.0.1",
+        "System.Dynamic.Runtime": "4.0.11"
       }
     },
     "netstandard1.3": {
@@ -128,6 +135,11 @@
           "PLIB",
           "USE_TIMER_SELF_ROOT"
         ]
+      },
+      "dependencies": {
+        "System.ComponentModel": "4.0.1",
+        "System.Diagnostics.Contracts": "4.0.1",
+        "System.Dynamic.Runtime": "4.0.11"
       }
     },
     "netcoreapp1.0": {
@@ -149,6 +161,9 @@
         ]
       },
       "dependencies": {
+        "System.ComponentModel": "4.0.1",
+        "System.Diagnostics.Contracts": "4.0.1",
+        "System.Dynamic.Runtime": "4.0.11",
         "System.Threading.Thread": "4.0.0",
         "System.Threading.ThreadPool": "4.0.10"
       }
@@ -179,7 +194,10 @@
         "Microsoft.TargetingPack.Private.WindowsPhone.v8.1": {
           "version": "1.0.1",
           "type": "build"
-        }
+        },
+        "System.ComponentModel": "4.0.1",
+        "System.Diagnostics.Contracts": "4.0.1",
+        "System.Dynamic.Runtime": "4.0.11"
       }
     },
     "netcore451": {
@@ -208,7 +226,10 @@
         "Microsoft.TargetingPack.Private.NETCore.v4.5.1": {
           "version": "1.0.0",
           "type": "build"
-        }
+        },
+        "System.ComponentModel": "4.0.1",
+        "System.Diagnostics.Contracts": "4.0.1",
+        "System.Dynamic.Runtime": "4.0.11"
       }
     },
     "uap10.0": {
@@ -240,7 +261,10 @@
           "version": "5.2.0",
           "type": "build"
         }
-      }
+      },
+      "System.ComponentModel": "4.0.1",
+      "System.Diagnostics.Contracts": "4.0.1",
+      "System.Dynamic.Runtime": "4.0.11"
     }
   }
 }
