--- a/Rx.NET/Source/System.Reactive/System.Reactive.csproj
+++ b/Rx.NET/Source/System.Reactive/System.Reactive.csproj
@@ -12,6 +12,7 @@
     <SignAssembly>true</SignAssembly>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
     <IncludeSymbols>true</IncludeSymbols>
+    <UseFullSemVerForNuGet>true</UseFullSemVerForNuGet>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <PackageTags>Rx;Reactive;Extensions;Observable;LINQ;Events</PackageTags>
     <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</PackageIconUrl>
