Temp workaround for https://github.com/NuGet/Home/issues/4143 by using assm ref

--- a/Rx.NET/Source/Microsoft.Reactive.Testing/Microsoft.Reactive.Testing.csproj
+++ b/Rx.NET/Source/Microsoft.Reactive.Testing/Microsoft.Reactive.Testing.csproj
@@ -54,7 +54,9 @@
     <PackageReference Include="GitVersionTask" Version="4.0.0-pullrequest1119-1208">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="xunit.assert.source" Version="2.2.0-beta4-build3444" />    
+    <!-- https://github.com/NuGet/Home/issues/4143 
+     <PackageReference Include="xunit.assert.source" Version="2.2.0-beta4-build3444" /> -->
+     <PackageReference Include="xunit.assert" Version="2.2.0-beta4-build3444" />
     <ProjectReference Include="..\System.Reactive\System.Reactive.csproj" />
   </ItemGroup>
 </Project>
