--- a/Rx.NET/Source/System.Reactive.Observable.Aliases/System.Reactive.Observable.Aliases.csproj
+++ b/Rx.NET/Source/System.Reactive.Observable.Aliases/System.Reactive.Observable.Aliases.csproj
@@ -1,29 +1,27 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard1.3</TargetFrameworks>    
+    <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
+    <Product>System.Reactive.Observable.Aliases ($(TargetFramework))</Product>
+    <Title>Reactive Extensions - Aliases</Title>
+    <Copyright>Copyright (c) .NET Foundation and Contributors.</Copyright>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
     <DefaultLanguage>en-US</DefaultLanguage>
     <MinClientVersion>2.12</MinClientVersion>
-    <Description>Reactive Extensions Testing Library containing interfaces and classes providing functionality to test applications and libraries built using Reactive Extensions.</Description>
-    <Copyright>Copyright (c) .NET Foundation and Contributors.</Copyright>
-    <AssemblyTitle>Microsoft.Reactive.Testing - Testing Helper Library</AssemblyTitle>
-    <Authors>.NET Foundation and Contributors</Authors>
-    <DefineConstants>$(DefineConstants);PLATFORM_DOTNET;XUNIT_VISIBILITY_INTERNAL</DefineConstants>
-    <NoWarn>$(NoWarn);CS1591</NoWarn>
     <GenerateDocumentationFile Condition=" '$(Configuration)' == 'Release' ">true</GenerateDocumentationFile>
-    <Product>Microsoft.Reactive.Testing ($(TargetFramework))</Product>
+    <Authors>.NET Foundation and Contributors</Authors>
     <AssemblyOriginatorKeyFile>../ReactiveX.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
+    <IncludeSymbols>true</IncludeSymbols>
+    <UseFullSemVerForNuGet>true</UseFullSemVerForNuGet>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <PackageTags>Rx;Reactive;Extensions;Observable;LINQ;Events</PackageTags>
     <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</PackageIconUrl>
     <PackageProjectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</PackageProjectUrl>
     <PackageLicenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <IncludeSymbols>true</IncludeSymbols>
-    <UseFullSemVerForNuGet>true</UseFullSemVerForNuGet>
-    <Description>Reactive Extensions (Rx) for .NET - Testing Library</Description>
-  </PropertyGroup>
+    <Description>Reactive Extensions (Rx) provides the aliases Map, FlatMap, and Filter</Description>
+  </PropertyGroup>  
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.3'">
     <DefineConstants>$(DefineConstants);NO_EVENTARGS_CONSTRAINT;HAS_WINRT;PREFER_ASYNC;USE_TIMER_SELF_ROOT;HAS_TPL46;NO_REMOTING;NO_SERIALIZABLE;CRIPPLED_REFLECTION</DefineConstants>
     <AssemblyVersion>4.0.3000.0</AssemblyVersion>
@@ -35,13 +33,9 @@
   <ItemGroup>
     <Compile Include="**\*.cs" />
     <EmbeddedResource Include="**\*.resx" />
-    <EmbeddedResource Include="Properties\*.xml" />
     <PackageReference Include="GitVersionTask" Version="4.0.0-pullrequest1119-1208">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <!-- https://github.com/NuGet/Home/issues/4143 
-     <PackageReference Include="xunit.assert.source" Version="2.2.0-beta4-build3444" /> -->
-    <PackageReference Include="xunit.assert" Version="2.2.0-beta4-build3444" />
     <ProjectReference Include="..\System.Reactive\System.Reactive.csproj" />
   </ItemGroup>
 </Project>
